unpackaged/main/default/objects/breadwinner_ns__BW_Check__c/breadwinner_ns__BW_Check__c.object-meta.xml
<CustomObject>
    <label>NetSuite Check</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>