unpackaged/main/default/objects/breadwinner_ns__BW_Check__c/fields/breadwinner_ns__Entity_Employee__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Entity_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Employee</label>
    <referenceTo>breadwinner_ns__BW_Employee__c</referenceTo>
    <relationshipLabel>NetSuite Checks</relationshipLabel>
    <relationshipName>BWChecks</relationshipName>
    <type>Lookup</type>
</CustomField>