unpackaged/main/default/objects/breadwinner_ns__BW_Check__c/fields/breadwinner_ns__TaxTotal__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__TaxTotal__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>