unpackaged/main/default/objects/breadwinner_ns__BW_Check__c/fields/breadwinner_ns__TranId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__TranId__c</fullName>
    <label>Check #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>