unpackaged/main/default/objects/breadwinner_ns__BW_Check__c/fields/breadwinner_ns__TransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__TransactionNumber__c</fullName>
    <label>Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>