unpackaged/main/default/objects/breadwinner_ns__BW_Check__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__TranDate__c</columns>
    <columns>breadwinner_ns__Status__c</columns>
    <columns>breadwinner_ns__Subsidiary__c</columns>
    <columns>breadwinner_ns__EntityName__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <columns>breadwinner_ns__UserTotal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>